RESOLVED FIXED191821
Composited and tiled layers fail to update on scrolling in WebView
https://bugs.webkit.org/show_bug.cgi?id=191821
Summary Composited and tiled layers fail to update on scrolling in WebView
Simon Fraser (smfr)
Reported 2018-11-17 20:54:48 PST
Composited and tiled layers fail to update on scrolling in WebView
Attachments
Patch (12.49 KB, patch)
2018-11-17 21:06 PST, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.48 MB, application/zip)
2018-11-17 23:11 PST, EWS Watchlist
no flags
Patch (16.66 KB, patch)
2018-11-27 12:28 PST, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2018-11-17 21:06:15 PST
Simon Fraser (smfr)
Comment 2 2018-11-17 21:06:40 PST
EWS Watchlist
Comment 3 2018-11-17 23:11:32 PST
Comment on attachment 355227 [details] Patch Attachment 355227 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/10053576 New failing tests: compositing/backing/backing-store-attachment-scroll.html compositing/tiling/tile-coverage-on-scroll.html
EWS Watchlist
Comment 4 2018-11-17 23:11:34 PST
Created attachment 355230 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Simon Fraser (smfr)
Comment 5 2018-11-27 12:28:21 PST
alan
Comment 6 2018-11-27 12:39:35 PST
Comment on attachment 355761 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=355761&action=review > Source/WebCore/page/FrameView.cpp:2468 > + if (RenderView* renderView = this->renderView()) { auto pls.
Simon Fraser (smfr)
Comment 7 2018-11-27 13:57:41 PST
Note You need to log in before you can comment on or make changes to this bug.